--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "bundle/vim-kolor"]
 	path = bundle/vim-kolor
 	url = http://github.com/zeis/vim-kolor.git
+[submodule "bundle/shui"]
+	path = bundle/shui
+	url = https://github.com/shuiwuyuewu/shui.git
