--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "bundle/vim-kolor"]
 	path = bundle/vim-kolor
-	url = http://github.com/zeis/vim-kolor.git
+	url = https://github.com/zeis/vim-kolor.git
 [submodule "bundle/shui"]
 	path = bundle/shui
 	url = https://github.com/shuiwuyuewu/shui.git
